build: JAVA 8로 버전 변경